fix: fix header border overflow on horizontal side

--- a/src/blocks/header/__img-border/header__img-border.css
+++ b/src/blocks/header/__img-border/header__img-border.css
@@ -1,7 +1,7 @@
 .header__img-border {
   height: 15px;
   background-color: #000;
-  box-shadow: black 0 0 10px 10px;
+  box-shadow: 0 0 10px 10px #000;
   transform: translateY(-10px);
 }
 
@@ -21,6 +21,13 @@
 @media (min-width: 1280px) {
   .header__img-border {
     height: 60px;
+    box-shadow: none;
     box-shadow: 0 0 20px 20px #000;
+  }
+}
+
+@media (min-width: 1440px) {
+  .header__img-border {
+    clip-path: inset(-50px 0 -50px 0);
   }
 }
