--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,6 +1,2 @@
 @import url(./__img/header__img.css);
 @import url(./__img-border/header__img-border.css);
-
-.header {
-  overflow: hidden;
-}
